src/main-layout.css
.layout-container{
    width: 100%;
    margin: auto;
}

.nav-bar{
    position: fixed;
    width:100%;
}
.mui-appbar{
    background-color: #FF7043;
    
}

.nav-table{
    padding-left: 5%;
    padding-right: 5%;
}

.petland-title{
    color: white;
    font-size: 3em;
    font-weight: bold;

}

.nav-link{
    color: white;
    font-size: 1.3em;
    margin-left: 12px;
}
.logo{
    color: white;
    text-decoration: none;
}

.logo:hover, .logo:focus {
    text-decoration: none;
}
.view-container{
    max-width: 960px;
    margin: auto;
    padding-top: 65px;
}

.add-pet-fab{
    position: fixed;
    bottom: 1em;
    right: 1em;
    font-size: 1.5em;
}

